fix: the field separator is in working condition